--- a/SimpleLineCount.Cli/SimpleLineCount.Cli.csproj
+++ b/SimpleLineCount.Cli/SimpleLineCount.Cli.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleLineCount\SimpleLineCount.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
