--- a/SimpleLineCount/SimpleLineCount.csproj
+++ b/SimpleLineCount/SimpleLineCount.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<OutputType>Exe</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Spectre.Console" Version="0.47.0" />
+	  <PackageReference Include="Spectre.Console.Cli" Version="0.47.0" />
+	</ItemGroup>
 
 </Project>
