--- a/SimpleLineCount/SimpleLineCount.csproj
+++ b/SimpleLineCount/SimpleLineCount.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -10,6 +10,12 @@
 	<ItemGroup>
 	  <PackageReference Include="Spectre.Console" Version="0.47.0" />
 	  <PackageReference Include="Spectre.Console.Cli" Version="0.47.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="config.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
