Config option for excluding directories

--- a/SimpleLineCount/config.json
+++ b/SimpleLineCount/config.json
@@ -57,5 +57,12 @@
 			"SingleLineCommentToken": null,
 			"MultiLineCommentTokens": null
 		}
+	],
+	"ExcludedDirectories": [
+		"node_modules",
+		".git",
+		"dist",
+		"bin",
+		"obj"
 	]
 }
