--- a/SimpleLineCount/SimpleLineCount.csproj
+++ b/SimpleLineCount/SimpleLineCount.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Spectre.Console" Version="0.50.0" />
 	  <PackageReference Include="Spectre.Console.Cli" Version="0.50.0" />
+	  <PackageReference Include="Spectre.Console.Cli.Extensions.DependencyInjection" Version="0.7.0" />
 	</ItemGroup>
 
 	<ItemGroup>
